--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,14 @@
   margin: 0;
   padding: 0;
 }
+
 /* navigation section */
 header nav {
   width: 100%;
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  align-items: center;
   height: min-content;
 }
 .main_logo {
@@ -16,6 +20,7 @@ header nav {
   filter: drop-shadow(10px 10px 15px rgb(109, 109, 109));
 }
 ul {
+  width: 100%;
   padding-top: 5px;
   display: flex;
   justify-content: center;
@@ -28,20 +33,19 @@ ul li {
   text-decoration: none;
   display: inline;
 }
-ul li a{
+ul li a {
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
   color: black;
 }
 
-ul li a:hover{
-    color: #60b341;
-    transform: scale(1.2);
-    /* font-size: 18px; */
-    /* transition: all 0.3s ease-in-out; */
+ul li a:hover {
+  color: #60b341;
+  transform: scale(1.2);
+  font-size: 18px;
+  transition: all 0.3s ease-in-out;
 }
-
 
 .login-btn {
   width: 100px;
@@ -55,20 +59,122 @@ ul li a:hover{
   cursor: pointer;
   background-color: rgb(63, 210, 63);
 }
-.login-btn:hover{
-    background-color: beige;
-    color: green;
-    font-weight: 500;
-    transition: 0.3s all ease-in;
+.login-btn:hover {
+  background-color: beige;
+  color: green;
+  font-weight: 500;
+  transition: 0.3s all ease-in;
+}
+.toggle_btn {
+  width: min-content;
+  height: 10%;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+  color: black;
+}
+.logo-section {
+  display: none;
+}
+.dropdown_menu{
+    display: none;
 }
 /* end of navigation section */
+
+
+
+
+
+/* responsive design for navigation bar */
+@media (max-width: 1224px) {
+  ul li {
+    display: none;
+  }
+
+  .dropdown_menu{
+    display: none;
+    position: absolute;
+    padding: 0px;
+    height: 0px;
+    width: 100%;
+    top: 150px;
+    background-color: #60b341;
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    justify-content: center;
+    color: white;
+  }
+  .dropdown_menu.open{
+    height: 100vh;
+  }
+  .dropdown_menu li a{
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    color: wheat;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+  .dropdown_menu li a:hover{
+    color: yellow;
+    text-decoration: underline;
+    transition: all 0.2s ease-out;
+    scale: 0.9;
+  }
+
+
+  .toggle_btn {
+    display: block;
+    position: relative;
+    top: 30px;
+    font-size: 35px;
+    right: 35px;
+  }
+  .logo-section {
+    display: block;
+    position: relative;
+    top: 35px;
+  }
+  .dropdown_menu{
+    height: 0;
+  }
+
+  .login-btn{
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-self: center;
+    width: 300px;
+    height: min-content;
+    text-align: center;
+  }
+  .login-btn:hover{
+    transition: all 0.3s ease-in;
+    scale: 1.1;
+  }
+}
+/* end of responsive design for navigation bar */
 
 /* *********************************************************************** */
 
 
 
 
-/* hero section */
 
+
+
+
+
+
+/* hero section */
 
 /* end of hero section */
