required pages initial code added

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,8 +43,8 @@ ul li a {
 ul li a:hover {
   color: #60b341;
   transform: scale(1.2);
-  font-size: 18px;
-  transition: all 0.3s ease-in-out;
+  text-decoration: underline;
+ transition: all 0.3s ease-in-out;
 }
 
 .login-btn {
@@ -76,10 +76,34 @@ ul li a:hover {
 .logo-section {
   display: none;
 }
-.dropdown_menu{
-    display: none;
+.dropdown_menu {
+  display: none;
 }
 /* end of navigation section */
+
+
+
+/* hero section */
+
+
+/* end of hero section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -91,7 +115,7 @@ ul li a:hover {
     display: none;
   }
 
-  .dropdown_menu{
+  .dropdown_menu {
     display: none;
     position: absolute;
     padding: 0px;
@@ -107,14 +131,16 @@ ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
     justify-content: center;
     color: white;
   }
-  .dropdown_menu.open{
-    height: 100vh;
+  .dropdown_menu.open {
+    height: 80vh;
+    transition: all 0.5s ease-in-out;
+    animation-duration: 5s;
   }
-  .dropdown_menu li a{
+  .dropdown_menu li a {
     display: flex;
     flex-direction: column;
     font-size: 18px;
@@ -124,13 +150,12 @@ ul li a:hover {
     align-items: center;
     text-decoration: none;
   }
-  .dropdown_menu li a:hover{
+  .dropdown_menu li a:hover {
     color: yellow;
     text-decoration: underline;
     transition: all 0.2s ease-out;
     scale: 0.9;
   }
-
 
   .toggle_btn {
     display: block;
@@ -144,11 +169,11 @@ ul li a:hover {
     position: relative;
     top: 35px;
   }
-  .dropdown_menu{
+  .dropdown_menu {
     height: 0;
   }
 
-  .login-btn{
+  .login-btn {
     display: flex;
     padding: 10px;
     justify-content: center;
@@ -157,7 +182,7 @@ ul li a:hover {
     height: min-content;
     text-align: center;
   }
-  .login-btn:hover{
+  .login-btn:hover {
     transition: all 0.3s ease-in;
     scale: 1.1;
   }
@@ -167,14 +192,3 @@ ul li a:hover {
 /* *********************************************************************** */
 
 
-
-
-
-
-
-
-
-
-/* hero section */
-
-/* end of hero section */
