--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,6 +114,10 @@ ul li a:hover {
   ul li {
     display: none;
   }
+  header{
+    background-color: aliceblue;
+  }
+
 
   .dropdown_menu {
     display: none;
@@ -160,14 +164,14 @@ ul li a:hover {
   .toggle_btn {
     display: block;
     position: relative;
-    top: 30px;
+    top: 10px;
     font-size: 35px;
-    right: 35px;
+    right: 30px;
   }
   .logo-section {
     display: block;
     position: relative;
-    top: 35px;
+    top: 5px;
   }
   .dropdown_menu {
     height: 0;
