about us updated-1

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,7 @@
 /* navigation section */
 header nav {
   width: 100%;
+  background-color: antiquewhite;
   margin: 0px;
   padding: 0px;
   display: flex;
@@ -44,7 +45,7 @@ ul li a:hover {
   color: #60b341;
   transform: scale(1.2);
   text-decoration: underline;
- transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .login-btn {
@@ -81,43 +82,99 @@ ul li a:hover {
 }
 /* end of navigation section */
 
-
-
 /* hero section */
-
 
 /* end of hero section */
 
+/* about us section */
+.about-us-section {
+  display: flex;
+  width: 100%;
+  height: min-content;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
+.about-us-container1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  width: 100%;
+  height: min-content;
+  background-color: black;
+  flex-direction: column;
+}
+.about-us-container1 .about-us-heading {
+  position: relative;
+  font-size: 3rem;
+  font-weight: 400;
+  color: white;
+}
+.about-us-container1 .about-us-heading span {
+  color: rgb(59, 218, 59);
+}
+.about-us-container1 .about-us-p {
+  margin-top: 50px;
+  color: whitesmoke;
+  margin-right: 20%;
+  font-weight: 100;
+  margin-left: 20%;
+  text-align: center;
+  line-height: 25px;
+  display: flex;
 
+}
+.about-us-container2 {
+  width: 95.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  background-color: aliceblue;
+  gap: 0;
+  height: min-content;
+  padding: 30px;
+}
+.about-us-container2 .about-us-heading{
+  color: black;
+  font-size: 45px;
+  padding: 20px;
+  width: 300px;  
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.about-us-container2 .about-us-p{
+  color: black;
+  text-align: justify;
+  padding: 15px;
+  font-weight: 300;
+  text-decoration-color: aqua;
+  background-color: white;
+  font-size: 18px;
+  border-radius: 5%;
+  width: 600px;
+  line-height: 40px;
+  flex-shrink: 1;
+  margin: 50px 50px 50px 50px;
+}
+/* end of about us section */
 
 
 
 
 /* responsive design for navigation bar */
 @media (max-width: 1224px) {
+  /* start of nav bar */
   ul li {
     display: none;
   }
-  header{
+  header {
     background-color: aliceblue;
   }
-
 
   .dropdown_menu {
     display: none;
@@ -142,6 +199,7 @@ ul li a:hover {
   .dropdown_menu.open {
     height: 80vh;
     transition: all 0.5s ease-in-out;
+    z-index: 10;
     animation-duration: 5s;
   }
   .dropdown_menu li a {
@@ -190,9 +248,34 @@ ul li a:hover {
     transition: all 0.3s ease-in;
     scale: 1.1;
   }
+  /* end of nav bar */
+  /* about us */
+  .about-us-container1 .about-us-heading{
+    font-size: 1.5rem;
+  }
+  .about-us-container1 .about-us-p{
+    font-size: 14px;
+  }
+  .about-us-container2{
+ 
+    width: 93%;
+  }
+  .about-us-container2 .about-us-heading{
+    font-size: 2rem;
+  }
+  .about-us-container2 .about-us-p{
+    font-size: 14px;
+    line-height: 30px;
+  }
+  /* end of about us */
+  
+
+
 }
+
+
+
+
 /* end of responsive design for navigation bar */
 
 /* *********************************************************************** */
-
-
