hero-section-1 added

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,11 +85,61 @@ ul li a:hover {
   display: none;
 }
 /* end of navigation section */
-
+/* ************************************************** */
 /* hero section */
 
-/* end of hero section */
+.hero-section{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  align-items: center;
+  flex-direction: column;
+   flex-wrap: wrap;
+}
+.hero-section-1{
+  display: flex;
+  width: 100%;
+  padding: 30px;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-wrap: wrap-reverse;
+  height: 100vh;
+  gap: 50px;
+}
+.left-side{
+  width: 400px;
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.hero-left-img{
+width: 100%;
+flex-grow: 1;
+flex-shrink: 1;
+height: min-content;
+border-radius: 10%;
+}
+.right-side{
+  width: 400px;
 
+  padding: 2%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+}
+.hero-welcome-msg{
+  flex-grow: 1;
+  flex-shrink: 1;
+  text-align: justify;
+  line-height: 30px;
+}
+
+/* end of hero section */
+/* ************************************************** */
 /* about us section */
 .about-us-section {
   display: flex;
@@ -164,7 +214,7 @@ ul li a:hover {
   margin: 50px 50px 50px 50px;
 }
 /* end of about us section */
-
+/* ************************************************** */
 /* footer started */
 footer {
   display: flex;
@@ -237,6 +287,12 @@ footer {
 }
 
 /* end of footer */
+
+
+
+
+
+/* ************************************************** */
 
 /* responsive design for navigation bar */
 @media (max-width: 1224px) {
