--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,15 @@ header nav {
   display: flex;
   align-items: center;
   height: min-content;
+  animation: nav-load 500ms ease-in-out;
+}
+@keyframes nav-load{
+  0%{
+    transform: translateY(-100%);
+  }
+  100%{
+    transform: translateY(0);
+  }
 }
 .main_logo {
   width: 12rem;
