--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,11 +20,11 @@ header nav {
   height: min-content;
   animation: nav-load 500ms ease-in-out;
 }
-@keyframes nav-load{
-  0%{
+@keyframes nav-load {
+  0% {
     transform: translateY(-100%);
   }
-  100%{
+  100% {
     transform: translateY(0);
   }
 }
@@ -46,12 +46,26 @@ ul {
 ul li {
   text-decoration: none;
   display: inline;
+  animation: nav-link-load 300ms ease-in 500ms;
 }
+
 ul li a {
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
   color: black;
+}
+
+@keyframes nav-link-load {
+  0% {
+    transform: scale(0);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: translateY(1);
+  }
 }
 
 ul li a:hover {
@@ -97,16 +111,16 @@ ul li a:hover {
 /* ************************************************** */
 /* hero section */
 
-.hero-section{
+.hero-section {
   width: 100%;
   display: flex;
   justify-content: center;
   padding: 5px;
   align-items: center;
   flex-direction: column;
-   flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-.hero-section-1{
+.hero-section-1 {
   display: flex;
   width: 100%;
   padding: 30px;
@@ -118,33 +132,57 @@ ul li a:hover {
   height: 100vh;
   gap: 50px;
 }
-.left-side{
+.left-side {
   width: 400px;
   display: flex;
   flex-grow: 1;
   flex-shrink: 1;
+  animation-name: link-text;
+  animation-duration: 2s;
+  transform: rotateX(-1000%);
 }
-.hero-left-img{
-width: 100%;
-flex-grow: 1;
-flex-shrink: 1;
-height: min-content;
-border-radius: 10%;
+.hero-left-img {
+  width: 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  height: min-content;
+  border-radius: 10%;
 }
-.right-side{
-  width: 400px;
 
+.right-side {
+  width: 400px;
+  animation-name: link-text;
+  animation-duration: 2s;
+
+  transform: rotateX(-1000%);
   padding: 2%;
   flex-grow: 1;
   flex-shrink: 1;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
 }
-.hero-welcome-msg{
+.hero-welcome-msg {
   flex-grow: 1;
   flex-shrink: 1;
   text-align: justify;
   line-height: 30px;
+}
+.hero-welcome-msg span{
+  color: red;
+  font-size: x-large;
+}
+
+@keyframes link-text {
+  0% {
+    transform: translateX(-1000%);
+  }
+  90% {
+    transform: translateX(50%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 /* end of hero section */
@@ -296,10 +334,6 @@ footer {
 }
 
 /* end of footer */
-
-
-
-
 
 /* ************************************************** */
 
