--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ header {
 }
 header nav {
   width: 100%;
-  background-color: antiquewhite;
+  background-color: cornflowerblue;
   margin: 0px;
   padding: 0px;
   display: flex;
@@ -69,7 +69,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: #60b341;
+  color: white;
   transform: scale(1.2);
   text-decoration: underline;
   transition: all 0.3s ease-in-out;
@@ -109,8 +109,8 @@ ul li a:hover {
 }
 /* end of navigation section */
 /* ************************************************** */
-/* hero section */
 
+/* hero section */
 .hero-section {
   width: 100%;
   display: flex;
@@ -118,25 +118,27 @@ ul li a:hover {
   padding: 5px;
   align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
+  height: min-content;
 }
 .hero-section-1 {
   display: flex;
   width: 100%;
   padding: 30px;
+  flex-grow: 1;
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-shrink: 2;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-wrap: wrap-reverse;
-  height: 100vh;
+  flex-wrap: wrap;
+  height: min-content;
   gap: 50px;
 }
 .left-side {
   width: 400px;
   display: flex;
   flex-grow: 1;
-  flex-shrink: 1;
+
   animation-name: link-text;
   animation-duration: 2s;
   transform: rotateX(-1000%);
@@ -153,7 +155,7 @@ ul li a:hover {
   width: 400px;
   animation-name: link-text;
   animation-duration: 2s;
-
+  height: min-content;
   transform: rotateX(-1000%);
   padding: 2%;
   flex-grow: 1;
@@ -161,6 +163,7 @@ ul li a:hover {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
+  margin-bottom: 10px;
 }
 .hero-welcome-msg {
   flex-grow: 1;
@@ -168,7 +171,7 @@ ul li a:hover {
   text-align: justify;
   line-height: 30px;
 }
-.hero-welcome-msg span{
+.hero-welcome-msg span {
   color: red;
   font-size: x-large;
 }
@@ -183,6 +186,131 @@ ul li a:hover {
   100% {
     transform: translateX(0);
   }
+}
+
+.hero-section-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 30px;
+  flex-direction: column;
+  gap: 10px;
+}
+.hero-section-2 .hero-section-heading h1 {
+  font-size: 45px;
+  color: cadetblue;
+  position: relative;
+  left: 4px;
+  margin-bottom: 20px;
+}
+.news-cards {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+/* Image Card */
+
+.img-card {
+  width: 300px;
+  position: relative;
+  border-radius: 5px;
+  text-align: left;
+
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.img-card .card-image {
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+  border-radius: 5px 5px 0px 0px;
+  height: 200px;
+}
+
+.img-card .card-image img {
+  width: 100%;
+  border-radius: 5px 5px 0px 0px;
+  opacity: 0.9;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.img-card .card-image:hover img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.img-card .card-text {
+  padding: 0 15px 15px;
+  text-align: justify;
+  margin-top: 10px;
+  line-height: 1.5;
+}
+
+.img-card .card-link {
+  padding: 10px 15px 30px;
+  width: -webkit-fill-available;
+}
+
+.img-card .card-link a {
+  text-decoration: none;
+  position: relative;
+  padding: 10px 0;
+}
+
+.img-card .card-link a:after {
+  top: 30px;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  width: 0;
+
+  -webkit-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  -moz-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  -o-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+}
+
+.img-card .card-link a:hover:after {
+  width: 100%;
+  left: 0;
+}
+
+.img-card.iCard-style1 .card-title {
+  position: absolute;
+  font-family: "Open Sans", sans-serif;
+  z-index: 1;
+  top: 10px;
+  left: 10px;
+
+  font-size: 30px;
+  color: black;
+}
+
+.img-card.iCard-style1 .card-text {
+  color: #795548;
+}
+
+.img-card.iCard-style1 .card-link a {
+  color: #ff9800;
+}
+
+.img-card.iCard-style1 .card-link a:after {
+  background: #ff9800;
 }
 
 /* end of hero section */
@@ -270,7 +398,7 @@ footer {
   position: relative;
   justify-content: space-around;
   align-items: center;
-  background-color: antiquewhite;
+  background-color: cornflowerblue;
   padding: 50px;
   gap: 50px;
   flex-wrap: wrap;
@@ -314,7 +442,7 @@ footer {
   width: 200px;
 }
 .footer-2 ul li a:hover {
-  color: red;
+  color: lightgray;
   transition: none;
   scale: 0.9;
 }
