--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500);
+.blog-home2 {
+  font-family: "Montserrat", sans-serif;
+  color: #8d97ad;
+  font-weight: 300;
+}
+
 * {
   font-family: "Poppins", sans-serif;
   font-family: "Roboto", sans-serif;
@@ -197,8 +204,8 @@ ul li a:hover {
   flex-direction: column;
   gap: 10px;
 }
-.hero-section-2 .hero-section-heading h1 {
-  font-size: 45px;
+ .hero-section-heading h1 {
+  font-size: 3rem;
   color: cadetblue;
   position: relative;
   left: 4px;
@@ -219,7 +226,7 @@ ul li a:hover {
   position: relative;
   border-radius: 5px;
   text-align: left;
-
+  cursor: pointer;
   -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
   -o-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
@@ -237,7 +244,7 @@ ul li a:hover {
 .img-card .card-image img {
   width: 100%;
   border-radius: 5px 5px 0px 0px;
-  opacity: 0.9;
+  opacity: 0.3;
   -webkit-transition: all 0.8s;
   -moz-transition: all 0.8s;
   -o-transition: all 0.8s;
@@ -249,8 +256,12 @@ ul li a:hover {
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
   transform: scale(1.1);
-  opacity: 0.5;
+  opacity: 1;
+
+
 }
+
+
 
 .img-card .card-text {
   padding: 0 15px 15px;
@@ -300,7 +311,6 @@ ul li a:hover {
   font-size: 30px;
   color: black;
 }
-
 .img-card.iCard-style1 .card-text {
   color: #795548;
 }
@@ -313,6 +323,107 @@ ul li a:hover {
   background: #ff9800;
 }
 
+.hero-section-3{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: min-content;
+  /* gap: 30px; */
+  flex-direction: column;
+}
+.hero-section-3 .sec3-heading{
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+.sec3-heading h2{
+  text-align: center;
+  color: black;
+  margin: 10px;
+  font-size: 2rem;
+}
+.sec3-heading p{
+  font-size: 18px;
+  width: 60%;
+  font-weight: 400;
+  text-align: center;
+  color: darkmagenta;
+
+}
+.event-cards{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+  margin: 20px;
+  padding: 20px;
+  justify-content: center;
+
+}
+.event-card{
+  border-radius: 50px;
+  width: 350px;
+  position: relative;
+  margin: 30px;
+  height: min-content;
+  background-color: whitesmoke;
+  padding: 0px 30px 30px 30px;
+  display: flex;
+  box-shadow: 1px 1px 10px black;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  flex-direction: column;
+}
+.event-card:hover{
+  box-shadow: none;
+}
+.event-card .event-img{
+  width: 350px;
+  height: 250px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+.event-card .event-date{
+  background-color: green;
+  color: white;
+  position: relative;
+  top: -250px;
+  left: -120px;
+  width: 90px;
+  padding: 10px;
+  border-radius: 5px;
+  border-top-left-radius: 30px;
+}
+.event-card .event-heading{
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.event-card .event-description{
+  color: black;
+}
+.event-card .event-learn-more{
+  background-color: black;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  border: none;
+}
+.event-card .event-learn-more:hover{
+  background-color: gray;
+  color: black;
+}
+.event-card .event-learn-more a{
+  color: white;
+  text-decoration: none;
+}
 /* end of hero section */
 /* ************************************************** */
 /* about us section */
@@ -407,6 +518,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   align-items: center;
   gap: 20px;
   padding: 5px;
