--- a/CSS/style.css
+++ b/CSS/style.css
@@ -568,6 +568,231 @@ footer {
 
 /* end of footer */
 
+/* statistics page css */
+  .stat-section{
+    width: auto;
+    height: min-content;
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+  }
+  .stat-section-heading{
+   display: flex;
+   width: 100%;
+   padding: 10px;
+   justify-content: center;
+   align-items: center;
+   flex-shrink: 1;
+   flex-grow: 1;
+   text-align: center;
+   height: min-content;
+  }
+  .country-name h1{
+    font-size: 2rem;
+    text-align: center;
+    /* color: green; */
+    font-weight: 100; 
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+  .stat-section-search-input{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .country-name-searchbar{
+    width: 80%;
+    border: 0.2;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  .stat-section-search-output{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .country-details{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-shrink: 1;
+    flex-grow: 1;
+  }
+  .country-name h1{
+    font-size: 2.4rem;
+    color: #60b341;
+  }
+  .country-image{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: min-content; */
+    padding: 10px;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+  }
+  .country-img{
+    width: 80%;
+  }
+  .country-updates{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    line-height: 2;
+    padding: 10px;
+    font-size: 18px;
+    flex-wrap: wrap;
+  }
+#arrow-icon{
+  font-size: 25px;
+  margin-right: 10px;
+}
+/* end of statistics page css */
+
+/* news section */
+.news-section-container{
+  width: 100%;
+  height: min-content;
+  padding: 10px;
+}
+/* end of news section */
+
+
+
+/* contact us section */
+.contact-us-section{
+  width: 100%;
+  height: min-content;
+  padding: 20px;
+  flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.sec-one-contact{
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+}
+.contact-us-img{
+    width: 500px;
+    height: 109%;
+}
+.sec-two-contact{
+  width: 400px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: min-content;
+}
+.sec-two-contact h2{
+  font-size: 2rem;
+  font-style: oblique;
+  color: blue;
+}
+.contact-form{
+  display: flex;
+  gap: 20px;
+  width: 100%;
+
+  margin: 10px;
+  align-self: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.cnt-input{
+  width: 80%;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
+  font-size: 18px;
+
+}
+.cnt-txtarea{
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin: 10px;
+  font-size: 20px;
+  display: flex;
+  padding: 10px;
+  font-size: 18px;
+}
+.submit-btn{
+  width: 80%;
+  margin-bottom: 20px;
+  background-color: #60b341;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+.submit-btn:hover{
+  scale: 1.1;
+  transition: all 300ms ease-in;
+  background-color: black;
+}
+.contact-map{
+  width: 100%;
+}
+.contact-map iframe{
+  width: 100%;
+}
+/* end of contact us section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ************************************************** */
 
 /* responsive design for navigation bar */
