--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,19 @@
   color: #8d97ad;
   font-weight: 300;
 }
+.full-secreen-video {
+  width: 100%;
+  height: min-content;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-sec-video {
+  width: 100%;
+  position: relative;
+}
 
 * {
   font-family: "Poppins", sans-serif;
@@ -569,115 +582,166 @@ footer {
 /* end of footer */
 
 /* statistics page css */
-  .stat-section{
-    width: auto;
-    height: min-content;
-    padding: 20px;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    flex-direction: column;
-  }
-  .stat-section-heading{
-   display: flex;
-   width: 100%;
-   padding: 10px;
-   justify-content: center;
-   align-items: center;
-   flex-shrink: 1;
-   flex-grow: 1;
-   text-align: center;
-   height: min-content;
-  }
-  .country-name h1{
-    font-size: 2rem;
-    text-align: center;
-    /* color: green; */
-    font-weight: 100; 
-    flex-grow: 1;
-    flex-shrink: 1;
-  }
-  .stat-section-search-input{
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .country-name-searchbar{
-    width: 80%;
-    border: 0.2;
-    padding: 10px;
-    font-size: 16px;
-  }
+.stat-section {
+  width: auto;
+  height: min-content;
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+.stat-section-heading {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 1;
+  flex-grow: 1;
+  text-align: center;
+  height: min-content;
+}
+.country-name h1 {
+  font-size: 2rem;
+  text-align: center;
+  /* color: green; */
+  font-weight: 100;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.stat-section-search-input {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.country-name-searchbar {
+  width: 80%;
+  border: 0.2;
+  padding: 10px;
+  font-size: 16px;
+}
 
-  .stat-section-search-output{
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  .country-details{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    flex-shrink: 1;
-    flex-grow: 1;
-  }
-  .country-name h1{
-    font-size: 2.4rem;
-    color: #60b341;
-  }
-  .country-image{ 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* width: min-content; */
-    padding: 10px;
-    flex-grow: 1;
-    flex-shrink: 1;
-
-  }
-  .country-img{
-    width: 80%;
-  }
-  .country-updates{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    line-height: 2;
-    padding: 10px;
-    font-size: 18px;
-    flex-wrap: wrap;
-  }
-#arrow-icon{
+.stat-section-search-output {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.country-details {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  flex-shrink: 1;
+  flex-grow: 1;
+}
+.country-name h1 {
+  font-size: 2.4rem;
+  color: #60b341;
+}
+.country-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: min-content; */
+  padding: 10px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.country-img {
+  width: 80%;
+}
+.country-updates {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  line-height: 2;
+  padding: 10px;
+  font-size: 18px;
+  flex-wrap: wrap;
+}
+#arrow-icon {
   font-size: 25px;
   margin-right: 10px;
 }
 /* end of statistics page css */
 
 /* news section */
-.news-section-container{
+.news-section-container {
   width: 100%;
   height: min-content;
   padding: 10px;
 }
 /* end of news section */
 
+/* news letter section */
+.news-letters-section {
+  width: 100%;
+  height: 40vh;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.newsletter-container {
+  background-color: #7eb8df;
+  color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 70%;
+  margin-bottom: 10%;
+}
+
+.newsletter-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.input-email {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.subscribe-button {
+  background-color: #2980b9;
+  color: #ffffff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.subscribe-button:hover {
+  background-color: #2c3e50;
+}
+
+.privacy-message {
+  font-size: 12px;
+  margin-top: 10px;
+}
+/* end of news letter section */
 
 /* contact us section */
-.contact-us-section{
+.contact-us-section {
   width: 100%;
   height: min-content;
   padding: 20px;
@@ -690,16 +754,16 @@ footer {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.sec-one-contact{
+.sec-one-contact {
   width: 500px;
   height: 400px;
   overflow: hidden;
 }
-.contact-us-img{
-    width: 500px;
-    height: 109%;
+.contact-us-img {
+  width: 500px;
+  height: 109%;
 }
-.sec-two-contact{
+.sec-two-contact {
   width: 400px;
   padding: 10px;
   display: flex;
@@ -708,12 +772,12 @@ footer {
   align-items: center;
   height: min-content;
 }
-.sec-two-contact h2{
+.sec-two-contact h2 {
   font-size: 2rem;
   font-style: oblique;
   color: blue;
 }
-.contact-form{
+.contact-form {
   display: flex;
   gap: 20px;
   width: 100%;
@@ -725,15 +789,14 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.cnt-input{
+.cnt-input {
   width: 80%;
   margin: 10px;
   display: flex;
   padding: 10px;
   font-size: 18px;
-
 }
-.cnt-txtarea{
+.cnt-txtarea {
   width: 80%;
   padding: 10px;
   display: flex;
@@ -746,7 +809,7 @@ footer {
   padding: 10px;
   font-size: 18px;
 }
-.submit-btn{
+.submit-btn {
   width: 80%;
   margin-bottom: 20px;
   background-color: #60b341;
@@ -757,41 +820,18 @@ footer {
   padding: 10px;
   cursor: pointer;
 }
-.submit-btn:hover{
+.submit-btn:hover {
   scale: 1.1;
   transition: all 300ms ease-in;
   background-color: black;
 }
-.contact-map{
+.contact-map {
   width: 100%;
 }
-.contact-map iframe{
+.contact-map iframe {
   width: 100%;
 }
 /* end of contact us section */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ************************************************** */
 
@@ -897,6 +937,20 @@ footer {
     line-height: 30px;
   }
   /* end of about us */
+
+  .full-secreen-video {
+    width: 100%;
+    height: min-content;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-sec-video {
+    width: 100%;
+    position: relative;
+  }
 }
 
 /* end of responsive design for navigation bar */
