--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .blog-home2 {
   font-family: "Montserrat", sans-serif;
   color: #8d97ad;
@@ -17,6 +18,10 @@
   width: 100%;
   position: relative;
 }
+body {
+  background: linear-gradient(#0c2d57, #5d8ac4, #0c2d57);
+  color: white;
+}
 
 * {
   font-family: "Poppins", sans-serif;
@@ -24,6 +29,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* navigation section */
@@ -32,7 +38,8 @@ header {
 }
 header nav {
   width: 100%;
-  background-color: cornflowerblue;
+  color: white;
+  background-color: #0c2d57;
   margin: 0px;
   padding: 0px;
   display: flex;
@@ -51,7 +58,11 @@ header nav {
 .main_logo {
   width: 12rem;
   height: 7rem;
-  filter: drop-shadow(10px 10px 15px rgb(109, 109, 109));
+  filter: drop-shadow(10px 10px 15px white);
+}
+.main_logo:hover {
+  scale: 1.1;
+  transition: all 300ms ease-in-out;
 }
 ul {
   width: 100%;
@@ -68,12 +79,16 @@ ul li {
   display: inline;
   animation: nav-link-load 300ms ease-in 500ms;
 }
+ul li:hover {
+  scale: 1.2;
+}
 
 ul li a {
   text-decoration: none;
   font-size: 16px;
-  font-weight: 500;
-  color: black;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  color: white;
 }
 
 @keyframes nav-link-load {
@@ -89,8 +104,8 @@ ul li a {
 }
 
 ul li a:hover {
-  color: white;
-  transform: scale(1.2);
+  color: yellow;
+  /* transform: scale(1.2); */
   text-decoration: underline;
   transition: all 0.3s ease-in-out;
 }
@@ -105,13 +120,14 @@ ul li a:hover {
   font-weight: 400;
   color: white;
   cursor: pointer;
-  background-color: rgb(63, 210, 63);
+  border: 1px solid white;
+  background-color: transparent;
 }
 .login-btn:hover {
-  background-color: beige;
-  color: green;
-  font-weight: 500;
-  transition: 0.3s all ease-in;
+  background-color: white;
+  color: black;
+  /* font-weight: 500; */
+  /* transition: 0.3s all ease-in; */
 }
 .toggle_btn {
   width: min-content;
@@ -168,7 +184,6 @@ ul li a:hover {
   flex-grow: 1;
   flex-shrink: 1;
   height: min-content;
-  border-radius: 10%;
 }
 
 .right-side {
@@ -192,7 +207,7 @@ ul li a:hover {
   line-height: 30px;
 }
 .hero-welcome-msg span {
-  color: red;
+  color: yellow;
   font-size: x-large;
 }
 
@@ -240,10 +255,8 @@ ul li a:hover {
   border-radius: 5px;
   text-align: left;
   cursor: pointer;
-  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  -o-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  box-shadow: 0px 0px 1px #2c3e50;
 }
 
 .img-card .card-image {
@@ -349,29 +362,31 @@ ul li a:hover {
 }
 .sec3-heading h2 {
   text-align: center;
-  color: black;
+  color: white;
   margin: 10px;
   font-size: 2rem;
+  font-family: "Poppins", sans-serif;
 }
 .sec3-heading p {
   font-size: 18px;
   width: 60%;
   font-weight: 400;
   text-align: center;
-  color: darkmagenta;
+  color: wheat;
 }
 .event-cards {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  color: black;
   gap: 20px;
   margin: 20px;
   padding: 20px;
   justify-content: center;
 }
 .event-card {
-  border-radius: 50px;
+  border-radius: 10px;
   width: 350px;
   position: relative;
   flex-shrink: inherit;
@@ -393,8 +408,8 @@ ul li a:hover {
 .event-card .event-img {
   width: 350px;
   height: 250px;
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .event-card .event-date {
   background-color: green;
@@ -515,7 +530,7 @@ footer {
   position: relative;
   justify-content: space-around;
   align-items: center;
-  background-color: cornflowerblue;
+  background-color: #0c2d57;
   padding: 50px;
   gap: 50px;
   flex-wrap: wrap;
@@ -528,10 +543,15 @@ footer {
   align-items: center;
   gap: 20px;
   padding: 5px;
+  cursor: pointer;
 }
 .footer-1 img {
   width: 150px;
   height: 100px;
+}
+.footer-1 img:hover {
+  scale: 1.2;
+  transition: all 300ms ease-in;
 }
 .footer-2 {
   display: flex;
@@ -560,7 +580,7 @@ footer {
   width: 200px;
 }
 .footer-2 ul li a:hover {
-  color: lightgray;
+  color: yellow;
   transition: none;
   scale: 0.9;
 }
@@ -576,7 +596,7 @@ footer {
   font-size: 25px;
 }
 .footer-3 ul li a i:hover {
-  color: red;
+  color: yellow;
 }
 
 /* end of footer */
@@ -689,7 +709,7 @@ footer {
 .news-letters-section {
   width: 100%;
   height: 40vh;
-  font-family: "Arial", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -698,14 +718,15 @@ footer {
 }
 
 .newsletter-container {
-  background-color: #7eb8df;
+  background-color: transparent;
+  filter: blur("10px");
   color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px white;
   text-align: center;
   width: 70%;
-  margin-bottom: 10%;
+  /* margin-bottom: 10%; */
 }
 
 .newsletter-title {
@@ -852,7 +873,7 @@ footer {
     height: 0px;
     width: 100%;
     top: 150px;
-    background-color: #60b341;
+    background-color: #0c2d57;
     backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
@@ -865,6 +886,12 @@ footer {
     justify-content: center;
     color: white;
   }
+  #three-line-icon{
+color: white;
+  }
+  .three-line-icon{
+    color: white;
+      }
   .dropdown_menu.open {
     height: 80vh;
     transition: all 0.5s ease-in-out;
@@ -913,10 +940,6 @@ footer {
     height: min-content;
     text-align: center;
   }
-  .login-btn:hover {
-    transition: all 0.3s ease-in;
-    scale: 1.1;
-  }
   /* end of nav bar */
 
   /* about us */
@@ -950,6 +973,11 @@ footer {
   .hero-sec-video {
     width: 100%;
     position: relative;
+  }
+
+  /* news letter section bottom margin changed */
+  .news-letters-section{
+    margin-bottom: 10%;
   }
 }
 
