small screen bg added

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1004,7 +1004,7 @@ footer {
     width: 100%;
     display: inline-block;
     font-family: "Raleway", sans-serif;
-    font-size: 30pt;
+    font-size: 2rem;
     color: white;
     text-align: center;
     user-select: none;
