small screen bg added

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -995,6 +995,7 @@ footer {
     text-align: center;
     justify-content: center;
     align-content: center;
+    font-size: 1.5rem;
   }
 
   #text1,
