--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,7 +122,7 @@ ul li:hover {
 ul li a {
   text-decoration: none;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 500;
   font-family: "Poppins", sans-serif;
   color: white;
 }
@@ -140,7 +140,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: yellow;
+  color: orange;
   /* transform: scale(1.2); */
   text-decoration: underline;
   transition: all 0.3s ease-in-out;
@@ -243,7 +243,7 @@ ul li a:hover {
   line-height: 30px;
 }
 .hero-welcome-msg span {
-  color: yellow;
+  color: orange;
   font-size: x-large;
 }
 
@@ -616,7 +616,7 @@ footer {
   width: 200px;
 }
 .footer-2 ul li a:hover {
-  color: yellow;
+  color: orange;
   transition: none;
   scale: 0.9;
 }
@@ -632,7 +632,7 @@ footer {
   font-size: 25px;
 }
 .footer-3 ul li a i:hover {
-  color: yellow;
+  color: orange;
 }
 
 /* end of footer */
@@ -890,7 +890,7 @@ footer {
 /* ************************************************** */
 
 /* responsive design for navigation bar */
-@media (max-width: 1224px) {
+@media (max-width: 1284px) {
   /* start of nav bar */
   nav ul li {
     display: none;
@@ -942,7 +942,7 @@ footer {
     text-decoration: none;
   }
   .dropdown_menu li a:hover {
-    color: yellow;
+    color: orange;
     text-decoration: underline;
     transition: all 0.2s ease-out;
     scale: 0.9;
@@ -1054,7 +1054,6 @@ footer {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-
 }
 
 /* end of responsive design for navigation bar */
