--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,10 +54,6 @@
   width: 100%;
   position: relative;
 }
-body {
-  background: linear-gradient(#0c2d57, #5d8ac4, #0c2d57);
-  color: white;
-}
 
 * {
   font-family: "Poppins", sans-serif;
@@ -245,7 +241,7 @@ ul li a:hover {
   line-height: 30px;
 }
 .hero-welcome-msg span {
-  color: orange;
+  color: blue;
   font-size: x-large;
 }
 
@@ -400,7 +396,7 @@ ul li a:hover {
 }
 .sec3-heading h2 {
   text-align: center;
-  color: white;
+  color: black;
   margin: 10px;
   font-size: 2rem;
   font-family: "Poppins", sans-serif;
@@ -410,7 +406,7 @@ ul li a:hover {
   width: 60%;
   font-weight: 400;
   text-align: center;
-  color: wheat;
+  color: Black;
 }
 .event-cards {
   width: 100%;
@@ -441,7 +437,7 @@ ul li a:hover {
   flex-direction: column;
 }
 .event-card:hover {
-  box-shadow: 1px 1px 10px black;
+  box-shadow: 1px 1px 2px black;
 }
 .event-card .event-img {
   width: 350px;
@@ -464,23 +460,25 @@ ul li a:hover {
   font-size: 20px;
   font-weight: 400;
   margin-bottom: 10px;
+  color: black;
 }
 .event-card .event-description {
   color: black;
+
 }
 .event-card .event-learn-more {
-  background-color: black;
   padding: 10px;
   border-radius: 10px;
   color: white;
-  border: none;
+border: 1px solid black;
+  /* border: none; */
 }
 .event-card .event-learn-more:hover {
-  background-color: gray;
+  background-color: white;
   color: black;
 }
 .event-card .event-learn-more a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 /* end of hero section */
@@ -509,7 +507,7 @@ ul li a:hover {
   position: relative;
   font-size: 3rem;
   font-weight: 400;
-  color: white;
+  color: black;
 }
 .about-us-container1 .about-us-heading span {
   color: rgb(59, 218, 59);
@@ -581,6 +579,7 @@ footer {
   align-items: center;
   gap: 20px;
   padding: 5px;
+  color: white;
   cursor: pointer;
 }
 .footer-1 img {
@@ -639,97 +638,7 @@ footer {
 
 /* end of footer */
 
-/* statistics page css */
-.stat-section {
-  width: auto;
-  height: min-content;
-  padding: 20px;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  flex-direction: column;
-}
-.stat-section-heading {
-  display: flex;
-  width: 100%;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 1;
-  flex-grow: 1;
-  text-align: center;
-  height: min-content;
-}
-.country-name h1 {
-  font-size: 2rem;
-  text-align: center;
-  color: white;
-  font-weight: 100;
-  flex-grow: 1;
-  flex-shrink: 1;
-}
-.stat-section-search-input {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.country-name-searchbar {
-  width: 80%;
-  border: 0.2;
-  padding: 10px;
-  font-size: 16px;
-}
 
-.stat-section-search-output {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.country-details {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-  flex-shrink: 1;
-  flex-grow: 1;
-}
-.country-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* width: min-content; */
-  padding: 10px;
-  flex-grow: 1;
-  flex-shrink: 1;
-}
-.country-img {
-  width: 80%;
-}
-.country-updates {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  line-height: 2;
-  padding: 10px;
-  font-size: 18px;
-  flex-wrap: wrap;
-}
-#arrow-icon {
-  font-size: 25px;
-  margin-right: 10px;
-}
-/* end of statistics page css */
 
 /* news section */
 .news-section-container {
@@ -756,6 +665,7 @@ footer {
   backdrop-filter: blur(10px);
   /* filter: blur("10px"); */
   color: #ffffff;
+  background-color: #0f3a73;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px white;
@@ -811,16 +721,16 @@ footer {
   margin-bottom: 30px;
 }
 .sec-one-contact {
-  width: 500px;
+  width: 600px;
   height: 400px;
   overflow: hidden;
 }
 .contact-us-img {
-  width: 500px;
+  width: 600px;
   height: 109%;
 }
 .sec-two-contact {
-  width: 400px;
+  width: 500px;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -846,14 +756,14 @@ footer {
   align-items: center;
 }
 .cnt-input {
-  width: 80%;
+  width: 100%;
   margin: 10px;
   display: flex;
   padding: 10px;
   font-size: 18px;
 }
 .cnt-txtarea {
-  width: 80%;
+  width: 100%;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -973,7 +883,7 @@ footer {
     align-self: center;
     width: 300px;
     height: min-content;
-    
+
     text-align: center;
   }
   /* end of nav bar */
