--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,8 +41,12 @@
 /* start of event slot  */
 .close {
   position: relative;
-  bottom: 2%;
   right: -95%;
+  width: 0;
+  height: 0;
+margin: 0;
+padding: 0;
+  /* top: -10px; */
   cursor: pointer;
   font-size: 3rem;
 }
